# emoji-maker

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  package-lock.json  package.json  pyproject.toml
scripts/: convert_fonts.py  setup_local.sh
src/: main.py
src/generator/: bambu_project_settings.json  font_manager.py  generate_3d_text.py  generate_picture.py  hdr.py
static/: index.html
tests/: test_fill_depth.py
webapp/: package-lock.json  package.json
webapp/public/: index.html
webapp/src/: App.css  App.tsx  index.tsx
webapp/src/components/: EmojiGenerator.css  EmojiGenerator.tsx  StlViewer.tsx  TextTo3D.css  TextTo3D.tsx  Toast.css  Toast.tsx
