[tool.poetry]
name = "emoji-maker"
version = "0.1.0"
description = ""
authors = ["Kamyar Ghasemlou  <github@kamy.me>"]
readme = "README.md"
packages = [{include = "emoji_maker"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^12.0.0"
ipdb = "^0.13.13"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
numpy = "^2.2.5"
pydantic = "^2.11.4"
opencv-python = "^4.11.0.86"
cadquery = "^2.4.0"
trimesh = "^4.0.0"
networkx = "^3.0"
lxml = "^5.0"

[tool.poetry.group.dev.dependencies]
fonttools = "^4.46.0"
brotli = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
